# abidiLinuxDebugger

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-test.yml  cmake.yml
Foundation/: CMakeLists.txt
Foundation/include/aldbg/: BreakPoint.h  Debugger.h
Foundation/src/: BreakPoint.cpp  Debugger.cpp  Launcher.cpp
dependencies/: CMakeLists.txt
samples/: CMakeLists.txt  debugee.cpp  main.cpp
scripts/: buildDebugForLinux.sh  configVCPKG.sh  envSetup.sh  installPKGs.sh  runTests.sh  updateReferences.sh
tests/: TestCommands.cpp
